[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "nbs-bl"
authors = [
    {name = "Charles Titus", email = "ctitus@bnl.gov"},
]
description = "Beamline Framework"
dynamic = ["version", "dependencies"]

[project.urls]
homepage = "https://github.com/xraygui/nbs-bl"

[tool.setuptools]
packages = ["nbs_bl"]

[tool.setuptools_scm]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.entry-points."nbs_bl.plan_loaders"]
xas = "nbs_bl.plans.xas:load_xas"